Findbugs errors
SVN-Revision: 10198